--- a/compose.yaml
+++ b/compose.yaml
@@ -10,14 +10,14 @@
 services:
   server:
     build:
-      context: /server
+      context: ./server
     environment:
       NODE_ENV: production
     ports:
       - 3000:3000
   client: 
     build: 
-      context: /client
+      context: ./client
     environment:
       NODE_ENV: production
     ports:
