--- a/compose.yaml
+++ b/compose.yaml
@@ -22,6 +22,37 @@ services:
       NODE_ENV: production
     ports:
       - 8000:8000
+  postgres:
+    image: postgres
+    container_name: data-postgres
+    ports: 
+      - 6543:6543
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  pgadmin:
+      image: dpage/pgadmin4
+      container_name: pgadmin
+      restart: always
+      ports:
+        - "8888:80"
+      environment:
+        PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+        PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      depends_on:
+        - postgres
+      volumes:
+        - pgadmin-data:/var/lib/pgadmin
+
+
+
+volumes: 
+  postgres_data:
+  pgadmin-data:
 
 
 # The commented out section below is an example of how to define a PostgreSQL
