--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,3 @@
-# syntax=docker/dockerfile:1
-
 # Comments are provided throughout this file to help you get started.
 # If you need more help, visit the Dockerfile reference guide at
 # https://docs.docker.com/go/dockerfile-reference/
@@ -13,26 +11,20 @@ FROM node:${NODE_VERSION}-alpine
 # Use production node environment by default.
 ENV NODE_ENV production
 
+# Set the working directory
+WORKDIR /app
 
-WORKDIR /usr/src/app
+# Copy package.json and package-lock.json and install dependencies
+COPY package*.json ./
 
-# Download dependencies as a separate step to take advantage of Docker's caching.
-# Leverage a cache mount to /root/.npm to speed up subsequent builds.
-# Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
-# into this layer.
-RUN --mount=type=bind,source=package.json,target=package.json \
-    --mount=type=bind,source=package-lock.json,target=package-lock.json \
-    --mount=type=cache,target=/root/.npm \
-    npm ci --omit=dev
+# Install dependencies
+RUN npm install
 
-# Run the application as a non-root user.
-USER node
-
-# Copy the rest of the source files into the image.
+# Copy the rest of the application code
 COPY . .
 
-# Expose the port that the application listens on.
+# Expose the port that the application listens on
 EXPOSE 8000
 
-# Run the application.
-CMD npm start
+# Run the application
+CMD ["npm", "start"]
