--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 # Comments are provided throughout this file to help you get started.
 # If you need more help, visit the Docker Compose reference guide at
 # https://docs.docker.com/go/compose-spec-reference/
@@ -8,6 +10,31 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 services:
+  db:
+    image: postgres
+    container_name: data-postgres
+    ports:
+      - "5432:5432"
+    restart: always
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: testDb
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    ports:
+      - "8888:80"
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+
   server:
     build:
       context: ./server
@@ -15,46 +42,17 @@ services:
       NODE_ENV: production
     ports:
       - 3000:3000
-  client: 
-    build: 
+  client:
+    build:
       context: ./client
     environment:
       NODE_ENV: production
     ports:
       - 8000:8000
-  postgres:
-    image: postgres
-    container_name: data-postgres
-    ports: 
-      - 6543:6543
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
 
-  pgadmin:
-      image: dpage/pgadmin4
-      container_name: pgadmin
-      restart: always
-      ports:
-        - "8888:80"
-      environment:
-        PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-        PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-      depends_on:
-        - postgres
-      volumes:
-        - pgadmin-data:/var/lib/pgadmin
-
-
-
-volumes: 
+volumes:
   postgres_data:
   pgadmin-data:
-
-
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
