--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,10 +41,16 @@ services:
   server:
     build:
       context: ./server
+    env_file:
+      - ./.env
     environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
       NODE_ENV: production
     ports:
       - 3000:3000
+  
   client:
     build:
       context: ./client
