--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,8 @@ services:
   client:
     build:
       context: ./client
+    env_file:
+      - ./.env
     environment:
       NODE_ENV: production
     ports:
