--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@propelauth/express": "^2.1.22",
     "@sequelize/postgres": "^7.0.0-alpha.41",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
