--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
   server:
     build:
       context: ./server
+      # target: builder
     env_file:
       - ./.env
     environment:
@@ -54,6 +55,18 @@ services:
   client:
     build:
       context: ./client
+    command: npm start
+    volumes:
+      - ./client:/app
+    develop:
+      watch:
+        - action: sync
+          path: ./client
+          target: /src/client
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./client/package.json
     env_file:
       - ./.env
     environment:
