--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "jest": "^27.5.1",
+    "msw": "^2.6.0"
   },
   "type": "module"
 }
